--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             <div>Seconds</div>
 
     </section>
+    <section class = "total-hours">
+            <div>Mac, that's</div>
+            <div id = "totalHours"></div>
+<!--             <div>Hours</div>
+            <div></div>
+            <div>Minutes</div>
+            <div ></div>
+            <div>Seconds</div> -->
+
+    </section>
     
 
     <script src="main.js"></script>
