html update to total hours

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </section>
     <section class = "total-hours">
-            <div>Mac, that's</div>
+            <div>Total Hours</div>
             <div id = "totalHours"></div>
 <!--             <div>Hours</div>
             <div></div>
