--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>Time Until Cancun</h1>
+        <h1>Countdown til' Cancun</h1>
     </header>
 
     <section class = "data">
